Fix sus authoritation